@@ -28,13 +28,16 @@ plugins/build/configurer.c
 plugins/build/executer.c
 plugins/build-basic-autotools/build-basic-autotools.c
 plugins/class-gen/clsGen.c
+plugins/cvs-plugin/anjuta-cvs-plugin.glade
 plugins/cvs-plugin/cvs.c
+plugins/cvs-plugin/cvs-execute.c
 plugins/cvs-plugin/cvs_cbs.c
 plugins/cvs-plugin/cvs_gui.c
-plugins/debugger/anjuta-debugger.glade
-plugins/debugger/attach_process.c
-plugins/debugger/plugin.c
-plugins/debugger/utilities.c
+plugins/cvs-plugin/plugin.c
+plugins/debug-manager/anjuta-debug-manager.glade
+plugins/debug-manager/attach_process.c
+plugins/debug-manager/plugin.c
+plugins/debug-manager/utilities.c
 plugins/devhelp/plugin.c
 plugins/editor/action-callbacks.c
 plugins/editor/anjuta-docman.c
