@@ -1,3 +1,11 @@
+2004-11-28  Naba Kumar  <naba@gnome.org>
+
+	* plugins/file-manager/an_file_view.c: Sorts the files alphabatically.
+	* plugins/project-manager/plugin.c: Fixed runtime warnings.
+	* libanjuta/anjuta-status.c: Fixed busy cursors.
+	* manuals/reference/libanjuta/tmpl/ianjuta-editor.sgml: Updated.
+	* po/POTFILES.in: Updated.
+	
 2004-11-28  Jean-Noel GUIHENEUF <guiheneuf.jean-noel@wanadoo.fr>
 	
 	* plugins/editor/anjuta-document-manager.glade,
